; ModuleID = '/home/carl/AnghaBench/git/extr_pretty.c_pp_commit_easy.c'
source_filename = "/home/carl/AnghaBench/git/extr_pretty.c_pp_commit_easy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit = type { i32 }
%struct.strbuf = type { i32 }
%struct.pretty_print_context = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pp_commit_easy(i32 %0, %struct.commit* %1, %struct.strbuf* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.commit*, align 8
  %6 = alloca %struct.strbuf*, align 8
  %7 = alloca %struct.pretty_print_context, align 4
  store i32 %0, i32* %4, align 4
  store %struct.commit* %1, %struct.commit** %5, align 8
  store %struct.strbuf* %2, %struct.strbuf** %6, align 8
  %8 = bitcast %struct.pretty_print_context* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %8, i8 0, i64 8, i1 false)
  %9 = load i32, i32* %4, align 4
  %10 = getelementptr inbounds %struct.pretty_print_context, %struct.pretty_print_context* %7, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  %11 = load %struct.commit*, %struct.commit** %5, align 8
  %12 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %13 = call i32 @pretty_print_commit(%struct.pretty_print_context* %7, %struct.commit* %11, %struct.strbuf* %12)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @pretty_print_commit(%struct.pretty_print_context*, %struct.commit*, %struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
